fixed a problem with last commit where the blue background on the active sector or society was too long. for #1065

--- a/media/css/style-ie7.css
+++ b/media/css/style-ie7.css
@@ -44,3 +44,12 @@ form.items-per-page {
 #home-container #home-titletag-cell {
     padding-top: 35px;
 }
+
+#left-column ul#sectors li,
+#left-column ul#societies li {
+    width: auto !important;
+}
+
+#left-column ul#sectors li a {
+    width: 164px !important;
+}
